[gd_scene load_steps=8 format=3 uid="uid://mbu4fle8rkr1"]

[ext_resource type="Script" uid="uid://csxmxcp3pid6" path="res://scripts/Menu.gd" id="1_rv0k4"]
[ext_resource type="Texture2D" uid="uid://codd5nqip8j4o" path="res://assets/DesignAsset/freecandybuttons/png/Blank/Text (1).png" id="2_5u0mn"]
[ext_resource type="Texture2D" uid="uid://cql7fdb3q1n6m" path="res://assets/DesignAsset/Candy World/Backgrounds/Background.png" id="2_wfhf6"]
[ext_resource type="Texture2D" uid="uid://bfseoi86g4wro" path="res://assets/DesignAsset/freecandybuttons/png/Blank/Text (2).png" id="3_4o0kq"]
[ext_resource type="Texture2D" uid="uid://bss3a4hbgaik" path="res://assets/DesignAsset/freecandybuttons/png/Blank/Text (3).png" id="4_v2r3f"]
[ext_resource type="AudioStream" uid="uid://fp4yu8mxavjv" path="res://assets/sounds/GameSound/MenuSound/cheerful-flooding-birds-singing-overhead.mp3" id="6_menu_aud"]
[ext_resource type="AudioStream" uid="uid://03oqh2ej51vq" path="res://assets/sounds/GameSound/BottonClickSound/mixkit-unlock-game-notification-253.wav" id="7_click_aud"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rv0k4")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_wfhf6")
expand_mode = 1

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_menu_aud")
volume_db = -6.0

[node name="ClickSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_click_aud")
volume_db = -3.0

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -220.0
offset_right = 220.0
offset_bottom = 220.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 48
alignment = 1

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.541, 0.749, 0.122, 1)
theme_override_font_sizes/font_size = 70
text = "Ball Burst Saga"
horizontal_alignment = 1

[node name="TitleSpacer" type="Control" parent="VBox"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2

[node name="PlayButton" type="TextureButton" parent="VBox"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("2_5u0mn")
texture_pressed = ExtResource("3_4o0kq")
texture_hover = ExtResource("4_v2r3f")

[node name="PlayLabel" type="Label" parent="VBox/PlayButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
text = "Play"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="TextureButton" parent="VBox"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("2_5u0mn")
texture_pressed = ExtResource("3_4o0kq")
texture_hover = ExtResource("4_v2r3f")

[node name="RestartLabel" type="Label" parent="VBox/RestartButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
text = "Restart"
horizontal_alignment = 1
vertical_alignment = 1
